[package]
name = "dechunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_repr = "0.1"
blosc = "0.1.3"
libmath = "0.2.1"
